--- a/organixx/src/MidCarousel.css
+++ b/organixx/src/MidCarousel.css
@@ -90,7 +90,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: #f3e1e1;
+  background: rgba(236, 234, 234, 0.514);
   top: 15px;
   left: 15px;
   z-index: -9999;
