--- a/organixx/src/MidCarousel.scss
+++ b/organixx/src/MidCarousel.scss
@@ -75,7 +75,7 @@ $thirdColor: #352336;
       position: absolute;
       width: 100%;
       height: 100%;
-      background: rgb(243, 225, 225);
+      background: rgba(236, 234, 234, 0.514);
       top: 15px;
       left: 15px;
       z-index: -9999;
