--- a/organixx/src/Form.css
+++ b/organixx/src/Form.css
@@ -27,20 +27,37 @@
 .form_container input {
   border-radius: 100px;
   border: none;
-  width: 300px;
+  width: 270px;
   height: 40px;
+  outline: none;
+  -webkit-transition-duration: .2s;
+          transition-duration: .2s;
+}
+
+.form_container input:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .form_container button {
   height: 40px;
   width: 100px;
-  margin-left: 8px;
+  margin-left: 15px;
   border-radius: 100px;
   border: none;
   background: #559c4e;
   color: white;
   border: none;
   cursor: pointer;
+  -webkit-transition-duration: .3s;
+          transition-duration: .3s;
+  outline: none;
+}
+
+.form_container button:hover {
+  background: #38c764;
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
 }
 
 .triangle-left {
